[package]
name = "cardano_portfolio_summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.16.0", features = ["crossterm"] }
crossterm = "0.20"
tokio = { version = "1", features = ["full"] }
